k8s/envs/prod/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    spec:
      containers:
      - name: node-app
        image: node-app:1.0
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 500Mi
