k8s/envs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-app-node
spec:
  rules:
  - host: node-app.prod.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-node
            port:
              name: node-port
